You can not longer gas your own allies

--- a/localisation/english/PB_Warcrimes_l_english.yml
+++ b/localisation/english/PB_Warcrimes_l_english.yml
@@ -35,6 +35,10 @@
   chembio.7.d:0 "Our soldiers at the front are suddenly falling ill after a series of enemy attacks. Upon investigation, it appears the illness is being caused by a weaponized illness deployed by one of our enemies against us.\n\nWe've quarantined the affected soldiers, but it may not be enough to keep this illness from spreading beyond the affected frontline or to our neighbors."
   chembio.7.a:0 "Oh no."
 
+  chembio.8.t:0 "Enemy Livewire Shelling"
+  chembio.8.d:0 "Our troops on the frontline are reporting a sudden outbreak of Livewire, likely caused by the enemy shelling Livewire buds on the region. Until this situation is resolved, we will be forced to advance more slowly to avoid casualties. On the upside, the enemy will have to deal with this issue as well."
+  chembio.8.a:0 "Get the flamethrower."
+
   ##########################
   # DECISIONS
   ##########################
