--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -445,9 +445,11 @@ strat_bomber_equipment_3:0 "Rockefeller II"
 scout_plane_equipment_1:0 "Scout Drone I"
 scout_plane_equipment_2:0 "Scout Drone II"
 
-chopper_equipment_1:0 "Great War Buzzard"
-chopper_equipment_2:0 "Buzzard II"
-chopper_equipment_3:0 "Buzzard III"
+transport_chopper_equipment:0 "Transport Buzzard"
+transport_chopper_equipment_1:0 "Great War Buzzard"
+transport_chopper_equipment_2:0 "Buzzard II"
+transport_chopper_equipment_3:0 "Buzzard III"
+attack_chopper_equipment:0 "Attack Buzzard"
 attack_chopper_equipment_1:0 "Airwulf I"
 attack_chopper_equipment_2:0 "Airwulf II"
 attack_chopper_equipment_3:0 "Airwulf III"
