--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -138,6 +138,8 @@
   PB_GER_Political_Violence_Red_1:0 "The Red Traitors"
   PB_GER_Political_Violence_Red_2:0 "The Red Traitors"
   PB_GER_Political_Violence_Mixed:0 "Polticial Extremism"
+  PB_GER_Political_Violence_Mixed_1:0 "Polticial Extremism"
+  PB_GER_Political_Violence_Mixed_2:0 "Polticial Extremism"
   PB_GER_Political_Violence_1:0 "Moderate Political Violence"
   PB_GER_Political_Violence_2:0 "Minor Political Violence"
   PB_GER_Political_Violence_3:0 "Contained Political Violence"
