--- a/localisation/english/PB_War_Outcome_Events_l_english.yml
+++ b/localisation/english/PB_War_Outcome_Events_l_english.yml
@@ -17,18 +17,22 @@ waroutcome.4.d:0 ""
 waroutcome.4.a:0 "Excellent."
 
 waroutcome.5.t:0 "The Future of Europe - The French Problem"
-waroutcome.5.d:0 ""
+waroutcome.5.d:0 "Our greatest rival, France, has been defeated and her corpse has been laid out for all to bear witness to. Despite many celebrating France's defeat the task of administrating these occupied regions is an issue the British government must tackle. Already many are suggesting border changes and whether new soverign states should be created.\n\nThe redrawing of France has now begun."
 waroutcome.5.a:0 "France will be restored to pre-war borders"
 waroutcome.5.b:0 "France shall be partially dismantled"
 waroutcome.5.c:0 "Francia delenda est"
 
-waroutcome.7.t:0 "Russia sues for Peace"
-waroutcome.7.d:0 ""
+waroutcome.7.t:0 "Russia sues for Peace" #Why is there two of these?
+waroutcome.7.d:0 "The Russian giant has come hurdling to the ground by the might of our armies, now its begs for our mercy. The immediate demands we plan on putting forwar is the direct transfer of the major Russian cities of St. Petersburg, Moscow, and Tsaritsyn. The rest of the nitty-gritty details are still being worked out on by League officials however Russia knows damn well that its time as an empire is coming to an end."
 waroutcome.7.a:0 "The Bear has finally been brought low."
 
-waroutcome.8.t:0 "Russia sues for Peace"
-waroutcome.8.d:0 ""
+waroutcome.8.t:0 "Russia sues for Peace" #Why is there two of these?
+waroutcome.8.d:0 "The Russian giant has come hurdling to the ground by the might of our armies, now its begs for our mercy. The immediate demands we plan on putting forwar is the direct transfer of the major Russian cities of St. Petersburg, Moscow, and Tsaritsyn. The rest of the nitty-gritty details are still being worked out on by League officials however Russia knows damn well that its time as an empire is coming to an end."
 waroutcome.8.a:0 "The Bear has finally been brought low."
+
+waroutcome.13.t:0 "Fall of Spain"
+waroutcome.13.d:0 "Spain has been defeated by League forces and now we must find a loyal collaborator to assist with the reconstruction of the Spanish nation."
+waroutcome.13.a:0 "Day by day the Pacte becomes weaker"
 
 waroutcome.15.t:0 "The Future of Spain"
 waroutcome.15.d:0 "With victory over the Spanish crusader state, it has become clear to our administrators that Spain has suffered the last few decades for want of a sovereign. Obviously the Bourbon dynasty which ruled before the Great War is out of consideration, which naturally leaves two obvious solutions. We can install a monarch from the British house of Saxe-Coburg and Gotha, or we can install a monarch from the House of Habsburg.\n\nBoth bring with them the natural political inclinations of their home country, with the Windsorite proposal citing the need for Spanish autonomism in the same model as the Imperial Confederation. The Habsburg proposal is more conservative, arguing for a federative Spanish kingdom with limited autonomy for the country's minority regions. The natural historical implications of returning Spain to the bosom of Vienna is fairly obvious, of course.\n\nRegardless of the decision, the League has a golden opportunity to capitalize on Spain's weariness to create a compliant nation and establish control over a critical instrument in rebuilding the European concert."
@@ -40,6 +44,6 @@ waroutcome.16.d:0 "Europe is once again in the midst of war, and we must focus o
 waroutcome.16.a:0 "We'll be back...probably"
 
 waroutcome.18.t:0 "The Future of Indochina"
-waroutcome.18.d:0 ""
+waroutcome.18.d:0 "Although we have defeated the North Vietnamese rebellion we cannot allow the people of Indochina to ever have the mere inclination to betray their British overlords. To avoid another potential uprising some in our cabinet are suggesting that we grant the region a greater level of autonomy and representation in the Imperial Confederation, or we could just stick to the old way of things."
 waroutcome.18.a:0 "Partition the former French colonies into client states"
 waroutcome.18.b:0 "Vietnam and Cambodia will remain under direct administration"
