--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -243,7 +243,7 @@
  VICTORY_POINTS_6380:0 "Moscow"
  VICTORY_POINTS_525:0 "Kyiv"
  VICTORY_POINTS_3529:0 "Tsaritsyn"
- VICTORY_POINTS_3151:0 "Petrograd"
+ VICTORY_POINTS_3151:0 "St. Petersburg"
  VICTORY_POINTS_6474:0 "Yuzivka"
  VICTORY_POINTS_9417:0 "Rostov-na-Donu"
  VICTORY_POINTS_11375:0 "Nizhnegorod"
