--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -193,7 +193,7 @@
  STATE_192:0 "Odessa"
  STATE_193:0 "Chernihiv"
  STATE_194:0 "Mozyr"
- STATE_195:0 "Petrograd"
+ STATE_195:0 "St. Petersburg"
  STATE_196:0 "Kherson"
  STATE_197:0 "Mykolaiv"
  STATE_198:0 "Vinnytsia"
