localization for music

--- a/localisation/english/music_station_l_english.yml
+++ b/localisation/english/music_station_l_english.yml
@@ -17,9 +17,51 @@
  Millenial_Rage:0 "Mechanicus | Millenial Rage"
  Warriors_of_Mars:0 "Mechanicus | Warriors of Mars"
  Blade_Runner_Blues:0 "Vangelis | Blade Runner Blues"
+ A_Symphony_Of_Industrial_Horns:0 "Arseny Avraamov | A Symphony of Industrial Horns"
+ Armory:0 "Daftpunk | Armory"
+ Elena:0 "Коньки | Elena"
+ End_Of_Line:0 "Daftpunk | End of Line"
+ Music_Of_The_Spheres:0 "Johanna Beyer | Music of the Spheres"
+ The_Game_Has_Changed:0 "Daftpunk | The Game Has Changed"
+ Unicron_Medley:0 "Vince Di Cola "
+ Escape:0 "Vince Di Cola | Escape"
 
  PB_Oldies_TITLE:0 "Imperial Broadcasting System - Classics"
  All_American_Girl:0 "All-American Girl | George Olsen"
  Change_my_tune:0 "I Guess I'll Have To Change My Plan | Layton & Johnstone"
  My_Foolish_Heart:0 "My Foolish Heart | Jane Morgan"
  This_Time_Its_Real:0 "This Time It’s Real | Horace Heidt"
+ War_Declaration:0 "War Declaration | Wilmoth Houdini"
+ The_Very_Thought_Of_You:0 "The Very Thought of You | Al Bowlly"
+ The_Rose_Of_No_Mans_Land:0 "The Rose of No Man's Land | Henry Burr"
+ Strange_Fruit:0 "Strange Fruit | Billie Holiday"
+ The_Coffee_Song:0 "The Coffee Song | Frank Sinatra"
+ Stardust:0 "Stardust | Hoagy Carmichael"
+ Sing_You_Sinners:0 "Sing You Sinners | High Hatters"
+ Sing_Sing_Sing:0 "Sing Sing Sing | Benny Goodman"
+ La_Vie_En_Rose:0 "La Vie En Rose | Edith Piaf"
+ Mack_The_Knife:0 "Mack The Knife | Louis Armstrong & Lotte Lenya"
+ Masquerade:0 "Masquerade | Jack Hylton"
+ Minnie_The_Moocher:0 "Minnie The Moocher | Cab Calloway"
+ Powerhouse:0 "Powerhouse | Raymond Scott"
+ Praise_The_Lord_And_Pass_The_Ammunition:0 "Praise The Lord and Pass The Ammunition | Frank Loesser"
+ Send_Me_A_Peach:0 "Send Me A Peach | The Blasting Company"
+ It_Dont_Mean_A_Thing_If_It_Aint_Got_That_Swing:0 "It Don't Mean A Thing If It Ain't Got That Swing | Duke Ellington"
+ Its_A_Long_Way_To_Tipperary:0 "Its A Long Way To Tipperary | John McCormack"
+ Its_Been_A_Long_Long_Time:0 "It's Been A Long, Long Time | Kitty Kallen"
+ Heartaches:0 "Heartaches | Al Bowlly"
+ Home:0 "Home | Henry Hall"
+ House_Of_The_Rising_Sun:0 "House of the Rising Sun | Tom Clarence Ashley & Gwen Foster"
+ In_The_Pines:0 "In The Pines | Lead Belly"
+ Sinking_Ships:0 "Sinking Ships | The Blasting Company"
+ Black_And_Tan_Fantasy:0 "Black And Tan Fantasy | Duke Ellington"
+ Blue_Moon:0 "Blue Moon | Ted Fio Rito"
+ Boogie_Woogie_Bugle_Boy:0 "Boogie Woogie Bugle Boy | The Andrews Sisters"
+ Goodnight_My_Beautiful:0 "Goodnight My Beautiful | Russ Morgan"
+ I_Heard_The_Marching_Of_The_Drums:0 "I Heard The Marchin' Of The Drums | C W Stoneking"
+ American_Patrol:0 "American Patrol | Glenn Miller"
+ Anything_Goes:0 "Anything Goes | Paul Whiteman"
+ Beyond_The_Sea:0 "Beyond The Sea | Harry James"
+ Black_And_Blue:0 "Black And Blue | Louis Armstrong"
+ After_Youve_Gone:0 "After You've Gone | Marion Harris"
+ Alabama_Song:0 "Alabama Song | Max Raabe"
