Tech loc and bug fixes

--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -12,56 +12,55 @@
 
  infantry_rations_equipment:0 "Infantry Rations"
  infantry_rations:0 "Infantry Rations"
- infantry_rations_desc:0 ""
+ infantry_rations_desc:0 "Rations are an essential aspect of every soldiers military kit."
  infantry_rations3:0 "Improved Meal Supplments"
- infantry_rations3_desc:0 ""
+ infantry_rations3_desc:0 "By including  supplements in every meal we can expect every soldier to be at their best."
  infantry_rations4:0 "Enhanced Water Tablets"
- infantry_rations4_desc:0 ""
+ infantry_rations4_desc:0 "Water is an essential part of every humans diet and we should make sure that our soldiers only receive the finest of water."
  rations_equipment_1:0 "Rations"
- rations_equipment_1_desc:0 ""
+ rations_equipment_1_desc:0 "Rations are an essential aspect of every soldiers military kit."
  rations_equipment_2:0 "MREs"
- rations_equipment_2_desc:0 ""
+ rations_equipment_2_desc:0 "Rations are an essential aspect of every soldiers military kit."
  rations_equipment_3:0 "Military Survival Kits"
- rations_equipment_3_desc:0 ""
+ rations_equipment_3_desc:0 "Rations are an essential aspect of every soldiers military kit."
  infantry_drugs:0 "Basic Stimulant Manufacturing"
  infantry_drugs_desc:0 "Utilizing a combination of various medical science developments, chemistry and electronics, our technical teams can begin creating a whole galaxy of multi-colored uppers, downers, screamers, laughers and mindbreaking psychedelics for combat and civilian use. All under the table and very legal, of course."
  infantry_drugs_pep_pills:0 "Pep Pills"
- infantry_drugs_pep_pills_desc:0 ""
+ infantry_drugs_pep_pills_desc:0 "Pep pills will give our men on the field a much needed boost in speed, although these pills do have the added side affect of possible addiction."
  infantry_drugs_thalasin:0 "Thalasin"
- infantry_drugs_thalasin_desc:0 ""
+ infantry_drugs_thalasin_desc:0 "Thalasin soothes the mind and soul and could be used to ease an unruly populace from revolt."
  infantry_drugs_melange:0 "Melange"
- infantry_drugs_melange_desc:0 ""
+ infantry_drugs_melange_desc:0 "Melange also known as 'brown beer' increases the drinkers perception to even the most minute of details."
  infantry_drugs_victory_tonic:0 "Victory Tonic"
- infantry_drugs_victory_tonic_desc:0 ""
-
+ infantry_drugs_victory_tonic_desc:0 "Victory Tonic is capable of bringing even the most tired and saddened of individuals back to a tip-top shape."
  infantry_drugs_2:0 "Industrial Grade Stimulant Manufacturing"
- infantry_drugs_2_desc:0 ""
+ infantry_drugs_2_desc:0 "By expanding our stimulant manufacturing processes we can allow more of our soldiers to utilize our advancements in drug development."
  infantry_drugs_soma:0 "Soma"
- infantry_drugs_soma_desc:0 ""
+ infantry_drugs_soma_desc:0 "Soma makes its users less likely to deviate from group thinking and makes them less inclined to question higher authorities."
  infantry_drugs_obetrol:0 "Obetrol"
- infantry_drugs_obetrol_desc:0 ""
+ infantry_drugs_obetrol_desc:0 "Obetrol limits the human bodies natural demand for food, it effectively adds a level of artifical fullness."
  infantry_drugs_milk_plus:0 "Milk Plus"
- infantry_drugs_milk_plus_desc:0 ""
- 
+ infantry_drugs_milk_plus_desc:0 "Milk plus is essentialy just milk with just opioids in it. Simple yet very effective."
  infantry_drugs_substance_f:0 "Substance F"
- infantry_drugs_substance_f_desc:0 ""
-
+ infantry_drugs_substance_f_desc:0 "Substance F is made with wide combination of different drugs that boosts potential brain usage."
  infantry_drugs_3:0 "Enhanced Industrial Stimulant Manufacturing"
- infantry_drugs_3_desc:0 ""
+ infantry_drugs_3_desc:0 "The final form of stimulant manufacturing would be mass industrial production on a scale never seen before"
  infantry_strength_booster:0 "Musculo-Skeletal Gene Treatment"
- infantry_strength_booster_desc:0 ""
+ infantry_strength_booster_desc:0 "By injecting our soldiers with a special musculo-skeletal gene treatment we can expect increased muscle growth in only a few hours."
  infantry_intelligence_booster:0 "Ocular Injected Hypothalamus Therapy"
- infantry_intelligence_booster_desc:0 ""
+ infantry_intelligence_booster_desc:0 "Ocular Injected Hypothalamus Therapy is considered to be a unique form of shock therapy where participants will experience heightened mental functioning."
 
  infantry_standard_rounds:0 "Standard Munitions"
+ infantry_standard_rounds_desc:0 ""
  infantry_flechette_rounds:0 "Flechette Munitions"
+ infantry_flechette_rounds_desc:0 "Flechette rounds can penetrate some forms of enemy armour, usually basic light materials such as thin steel. "
  infantry_equipment_0_desc:0 ""
  infantry_armor_piercing_rounds:0 "Armor Piercing Munitions"
- infantry_armor_piercing_rounds_desc:0 ""
+ infantry_armor_piercing_rounds_desc:0 "Armor Piercing rounds have greater piercing potential then their standard munition counterparts."
  infantry_incendiary_rounds:0 "Incendiary Munitions"
- infantry_incendiary_rounds_desc:0 ""
+ infantry_incendiary_rounds_desc:0 "Incendiary bullets can cause minor third degree burns upon impact."
  infantry_explosive_rounds:0 "Explosive Munitions"
- infantry_explosive_rounds_desc:0 ""
+ infantry_explosive_rounds_desc:0 "Explosive bullets explode on impact causing major skin tissue damage."
 
  tech_flamethrower:0 "Flamethrowers"
  tech_flamethrower_desc:0 "Developed during the Great War, Flamethrowers utilize a complex chemical process to launch flaming material against targets. While volatile and unwieldy, these weapons are very effective in urban environments."
@@ -158,18 +157,30 @@
  razor_girl_0_desc:0 "While never seeing wartime service, the interwar saw many gearheads experiment on themselves, chasing the perpetually unachievable high of being faster, stronger and deadlier. This practice lead to the development of Razormaidens, a unique class of special operations units largely composed of heavily augmented women. Every appendage is augmented, turning these units into incredibly fast killing machines, in some instances literally armed to the teeth."
 
  special_forces_power_armor_upgrade:0 "Improved Assault Servos"
+ special_forces_power_armor_upgrade_desc:0 "Improved Assault Servos"
  special_forces_power_armor_upgrade2:0 "Expanded Visual Sensors"
+ special_forces_power_armor_upgrade2_desc:0 "Expanded Visual Sensors"
  special_forces_power_armor_upgrade3:0 "Automated Health Assessments"
+ special_forces_power_armor_upgrade3_desc:0 "Automated Health Assessments"
  special_forces_power_armor_upgrade4:0 "Improved Radio Transmitters"
+ special_forces_power_armor_upgrade4_desc:0 "Improved Radio Transmitters"
  special_forces_power_armor_upgrade5:0 "Air Conditioning Sensors"
+ special_forces_power_armor_upgrade5_desc:0 "Air Conditioning Sensors"
  special_forces_power_armor_upgrade6:0 "Kinetic-Resistant Formed Armor"
+ special_forces_power_armor_upgrade6_desc:0 "Kinetic-Resistant Formed Armor"
 
  special_forces_razor_girls1:0 "Combat Infiltrator Module"
+ special_forces_razor_girls1_desc:0 "Combat Infiltrator Module"
  special_forces_razor_girls2:0 "Rusalka Protocols"
+ special_forces_razor_girls2_desc:0 "Rusalka Protocols"
  special_forces_razor_girls3:0 "Full Body Weaponization"
+ special_forces_razor_girls3_desc:0 "Full Body Weaponization"
  special_forces_razor_girls4:0 "Chameleonic Gene Splicing"
+ special_forces_razor_girls4_desc:0 "Chameleonic Gene Splicing"
  special_forces_razor_girls5:0 "Modular Bodily Construction"
+ special_forces_razor_girls5_desc:0 "Modular Bodily Construction"
  special_forces_razor_girls6:0 "Bio-Tech Evolutionary Synthesis"
+ special_forces_razor_girls6_desc:0 "Bio-Tech Evolutionary Synthesis"
 
  cybers_tech:0 "Cyber Tech"
  EQUIPMENT_ARMOR:0 "Armour"
@@ -238,16 +249,25 @@
  combatagate_upgrade_2:0 "Hive Hierarchy Development"
  combatagate_upgrade_2_desc:0 "The hierarchy of Bee Hives is an excellent template for improving the combat communication and coordination of combat amalgamates, granting them greater organizational skills."
  combatagate_upgrade_A:0 "Neuron Complexity Theorem"
+ combatagate_upgrade_A_desc:0 ""
  combatagate_upgrade_4:0 "Cephalopod Chromatophores"
+ combatagate_upgrade_4_desc:0 "Cephalopod Chromatophores"
  combatagate_upgrade_5:0 "Carcinisation Principle"
+ combatagate_upgrade_5_desc:0 "Carcinisation Principle"
  combatagate_upgrade_6:0 "Full Spectrum Analysis"
+ combatagate_upgrade_6_desc:0 "Full Spectrum Analysis"
  combatagate_upgrade_7:0 "lyssavirus Implant Procedure"
+ combatagate_upgrade_7_desc:0 "lyssavirus Implant Procedure"
  combatagate_2:0 "Combatagate Assault Forms"
  combatagate_2_desc:0 "Created either to spit in the face of god or prove he has abandoned us, Assault Combatagates are the unnatural evolution of Amalgate Genetics. Less of a real animal and more a violent soup of genes, new model Combatagates are extremely unstable and begin to decompose within minutes of oxygen exposure. The existential horror of their approaching death seems to improve combat performance."
  combatagate_upgrade_8:0 "Crocodylidae Bite Force"
+ combatagate_upgrade_8_desc:0 "Crocodylidae Bite Force"
  combatagate_upgrade_9:0 "Aquatic Oxygen Processing"
+ combatagate_upgrade_9_desc:0 "Aquatic Oxygen Processing"
  combatagate_upgrade_10:0 "Kevlar Dermal Implants"
+ combatagate_upgrade_10_desc:0 "Kevlar Dermal Implants"
  combatagate_upgrade_11:0 "Streamlined Primordium Recycling"
+ combatagate_upgrade_11_desc:0 "Streamlined Primordium Recycling"
  combatagate_3:0 "Venator Class Amalgamate"
  combatagate_3_desc:0 "Nicknamed Venators, latin for Hunter, these Amalgamates are the cutting edge of bio-genetic science. Every cell and molecule is meticulously designed to maximize killing potential and combat sustainability. Higher brain functions remain dulled, allowing handlers to direct swarms using chemical markers and electric shocks."
 
