--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -669,15 +669,15 @@ PB_GER_China_Management:0 "Deutchsland in China"
   #PB_GER_Humanitarian_Organization:0 "Expand Humanitarian Organizations"
   #PB_GER_Humanitarian_Organization_desc:0 "TBD"
   PB_GER_Europe_Alliance_Network:0 "An European Bulwark against Extremism"
-  PB_GER_Europe_Alliance_Network_desc:0 "Here you want to be Lofn!"
+  PB_GER_Europe_Alliance_Network_desc:0 "Europe is under Siege. Imperialists are surrounding the core of Europe on all sides. Smaller Nations are being threathened by other major powers with barely any chance to survive. We need to strenghten the cooperation between all European States. In terms of industry and military cooperation we need to be more interconnected so that we can stand united!"
   PB_GER_Europe_Military_Aid:0 "Helping our Allies"
-  PB_GER_Europe_Military_Aid_desc:0 "This one too please!"
+  PB_GER_Europe_Military_Aid_desc:0 "The Militaries of several smaller nations in Europe are not able to develop new doctrines, technologies or just simple equipment. The economic crash limited all their investment oppurtunities. We need to share our military experience and give advice on how their armies should develop in the the next decades."
   PB_GER_Europe_Vienna_Research_Collab:0 "The Vienna Research Collaboration"
   PB_GER_Europe_Vienna_Research_Collab_desc:0 "Now that we have hopefully pleased the workers and the factory owners, it is time to also please the more intellectual ones from society. The science community has been a vital part of Germany since forever, and now it is time we give them them and the other scientists from the bloc the resources and oppurtunity they seek, by starting a collaboration project in which, centered in the city of Vienna, there will be a great science convention to host all the scientific communities from all over the bloc to discuss and present many great things. We hope many that many stunning inventions, innovations and weapons will be produced because of our great program."
   #PB_GER_Europe_Strength_Wallonia:0 "Protecting the Benelux"
   #PB_GER_Europe_Strength_Wallonia_desc:0 "TBD"
   PB_GER_Europe_Solidarity:0 "A Sense of Solidarity"
-  PB_GER_Europe_Solidarity_desc:0 "This one too please Lofn!"
+  PB_GER_Europe_Solidarity_desc:0 "There is something connecting all of us. Is it our desire for freedom? Our respect for the democratic institutions and beliefs? Our shared cultures? It does not matter really. Europe stands united against the black clouds assembling at the horizon. Together we can overcome all hardships!"
   #PB_GER_Europe_Future_Union:0 "The Beginning of an Union"
   #PB_GER_Europe_Future_Union_desc:0 "TBD"
   PB_GER_Europe_Economic_Aid:0 "Worker Exchange Programms"
