--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -10,6 +10,24 @@
  infantry_equipment_1933_short:0 "Interwar Eq."
  infantry_equipment_1933_desc:0 "Personal and crew served weapons for infantry as well as the various other bits of kit a soldier needs."
 
+ infantry_equipment_0:0 "Great War Infantry Equipment"
+ infantry_equipment_0_short:0 "Great War Infantry Eq."
+ infantry_equipment_0_desc:0 "Personal and crew served weapons for infantry as well as the various other bits of kit a soldier needs." 
+
+ infantry_equipment_1:0 "Standardized Infantry Equipment"
+ infantry_equipment_1_short:0 "Standardized Infantry Eq."
+ infantry_equipment_1_desc:0 "Personal and crew served weapons for infantry as well as the various other bits of kit a soldier needs." 
+
+ infantry_equipment_2:0 "Improved Infantry Equipment"
+ infantry_equipment_2_short:0 "Improved Infantry Eq."
+ infantry_equipment_2_desc:0 "Personal and crew served weapons for infantry as well as the various other bits of kit a soldier needs." 
+
+ infantry_equipment_3:0 "Advanced Infantry Equipment"
+ infantry_equipment_3_short:0 "Advanced Infantry Eq."
+ infantry_equipment_3_desc:0 "Personal and crew served weapons for infantry as well as the various other bits of kit a soldier needs." 
+
+ AIR_TITLE_STRAT_BOMBER:0 "Strategic\nBlimbs"
+
  infantry_rations_equipment:0 "Infantry Rations"
  infantry_rations:0 "Infantry Rations"
  infantry_rations_desc:0 "Rations are an essential aspect of every soldiers military kit."
