--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -306,7 +306,7 @@
  RUS_infantry_equipment_3:0 "Avtomat Rifle - Kinetic Type 1"
  RUS_infantry_equipment_3_short:0 "AVR-KT1"
 
- infantry_weapons1933:0 "Interwar Weapons"
+ infantry_weapons1933:0 "Infantry Equipment II"
  infantry_weapons1933_desc:0 "Personal and crew served weapons for infantry as well as the various other bits of kit a soldier needs. Improved weapon models and more specialized equipment."
 
  ###Wolfxe placeholders, don't forget to change these!
@@ -323,12 +323,12 @@
  mechanized_equipment_2_desc:0 ""
  mechanized_equipment_3:0 "Mechanised Equipment III"
  mechanized_equipment_3_desc:0 ""
- infantry_equipment:0 "Infantry Equipment"
- infantry_equipment_desc:0 ""
- infantry_equipment_0_desc:0 ""
- infantry_equipment_1_desc:0 ""
- infantry_equipment_2_desc:0 ""
- infantry_equipment_3_desc:0 ""
+ #infantry_equipment:0 "Infantry Equipment II"
+ infantry_equipment_desc:0 "Personal and crew served weapons for infantry as well as the various other bits of kit a soldier needs."
+ infantry_equipment_0_:0 "Infantry Equipment I"
+ infantry_equipment_1_:0 "Infantry Equipment III"
+ infantry_equipment_2_:0 "Infantry Equipment IV"
+ infantry_equipment_3_:0 "Infantry Equipment V"
  artillery_equipment:0 "Artillery Equipment"
  artillery_equipment_desc:0 ""
  artillery_equipment_1:0 "Towed Artillery"
