--- a/localisation/english/PB_Germany_l_english.yml
+++ b/localisation/english/PB_Germany_l_english.yml
@@ -721,14 +721,16 @@ PB_GER_China_Management:0 "Deutchsland in China"
 
   PB_GER_Black_Diplomacy:0 "Our New Destiny"
   PB_GER_Black_Diplomacy_desc:0 "Long enough have we, the German people, been opressed, violated and attacked. We must stand on our own feet, we don't need the British, we don't need any allies for that matter. It is important we defend our great nation all by ourselves and defeat our enemies at every battle no matter the cost. There must come a time where the European continent will be dominated by Germany, and by Germany alone. Everything shall revolve around us, no one would be able to challange us, defeat us or question us."
-  #PB_GER_Aggressive_Doctrine:0 "The German Century"
-  #PB_GER_Aggressive_Doctrine_desc:0 "TBD"
+  PB_GER_Aggressive_Doctrine:0 "The German Century"
+  PB_GER_Aggressive_Doctrine_desc:0 ""
+  PB_GER_Aggressive_Doctrine_2:0 "The German Century"
+  PB_GER_Aggressive_Doctrine_2_desc:0 ""
   #PB_GER_German_System_idea:0 "The German System"
   #PB_GER_German_System_idea_desc:0 "TBD"
   PB_GER_Demands_Danish:0 "Threatening the Danish"
   PB_GER_Demands_Danish_desc:0 "The Danish Government has gone too far. The brutal crackdown of the Germanic Movement in Kiel was inhuman and completely unnecessary. Despite there being one or three radicals, like in every movement, the movement and its supporters very largely peaceful and worked together with the Democratic Mechanisms. The Danish have demonstrated that they are not able to govern German People with their recent escalation. The United Kingdoms of Germany has come to the conclusion that the agreements with the Danish and Kiel Governments are not in effect anymore and they have lost their right to rule the region of Holstein. We demand that the region of Holstein becomes a part of the Volksstaat of Hannover."
   PB_GER_Warning_Swiss:0 "The Travancore Expedition"
-  PB_GER_Warning_Swiss_desc:0 "The German government has invested quite a bit of money into the Indian nation of Travancore, resulting in a large and uncontested monopoly in the Travancorian economy. Some individuals in our cabinet believe we could coup the Indian Travancorian government and place someone a little more pr-German into a position of power."
+  PB_GER_Warning_Swiss_desc:0 "The German government has invested quite a bit of money into the Indian nation of Travancore, resulting in a large and uncontested monopoly in the Travancorian economy. Some individuals in our cabinet believe we could coup the Indian Travancorian government and place someone a little more pro-German into a position of power."
   #PB_GER_Look_Balkans:0 "Look to the Balkans"
   #PB_GER_Look_Balkans_desc:0 "TBD"
   #PB_GER_reinforcing_grip_over_europe:0 "Reinforcing Our Grip over Europe"
@@ -1915,3 +1917,10 @@ HamburgLeag_research_desc:0 "The Vienna Research Collaboration was founded in NÃ
  GER_Victory_In_Europe:0 "Victory in Europe"
 
  mex_co_war_over_condition:0 "The Mexican-Coalition War is Over"
+
+
+
+
+  germany.666.t:0 "Thank You Playing Germany and Thanks for Eveyone who helped me work on this nation"
+  germany.666.d:0 "This is it. This is the end of your game most likely. I hope you had fun with the United Kingdoms of Germany and Bugs did not ruin your experience.\n\nMaybe you will not even see this event but nonetheless, I want to express my thanks to everyone who helped me on Germany.\n\nThere is Weis, propably the best GFX Artist I know in this community. He helped me early when I started working here and his icons are just beautiful. With every single day that passed the quality of his icons just became better and better. Thank you Weis.\n\nI want to thank every localisation writer who helped me write focus descriptions, events or decisions. English is not my main language and writing long complicated texts has always put my modding on a pause. But thanks to you guys, we were able to give lore and life to Germany. Thank you Silent King, TheGamingTapir, Erwin, Soble and Mimi.\n\nI want to thank everyone who helped with coding. May you be from the development team or the Mod Coop, you always helped me with the tedious Hoi4 Code. I was able to advance my modding skills thanks to you and hope that I will learn lot more in the future. Thank you Bernie, Grestin, Stallone, Fausi, Nilo, Zero, Two Wat and so many others.\n\nWe all supported and helped each other so we could be able to release this mod. I want to thank so many more like Boring for his 3D Model Expertise, the Music Guys, the people who made me laugh and so many more but we would reach the limit of the event space.\n\nLastly I want to experess my own gratitude to be able to work on this mod. I have worked on several Hoi4 mods in the past but this is the first one where I really felt like that there was a vision for the setting. That there was a genuine desire to create fun gameplay for the players. And that there is such a great development team. Thank you Grestin and Bernie for accepting my application.\nThis is the first time I worked on major country on modding, including making custom mechanics. I had to learn new things, bear a lot of responsibility and experience several pushbacks but in the end it is finished. Pax is finally coming back.\n\nAnd of course.\nMy greatest thanks is to you. The player who decided to play this mod we all worked on. I hope you have a great day.\n\n\n- Lofn"
+  germany.666.a:0 "Development will always continue!"
