--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -72,7 +72,9 @@
  infantry_standard_rounds_desc:0 ""
  infantry_flechette_rounds:0 "Flechette Munitions"
  infantry_flechette_rounds_desc:0 "Flechette rounds can penetrate some forms of enemy armour, usually basic light materials such as thin steel. "
- infantry_equipment_0_desc:0 ""
+ 
+ infantry_equipment:0"Infantry Equipment"
+ infantry_equipment_desc:0 ""
  infantry_armor_piercing_rounds:0 "Armor Piercing Munitions"
  infantry_armor_piercing_rounds_desc:0 "Armor Piercing rounds have greater piercing potential then their standard munition counterparts."
  infantry_incendiary_rounds:0 "Incendiary Munitions"
