--- a/localisation/english/PB_Government_l_english.yml
+++ b/localisation/english/PB_Government_l_english.yml
@@ -261,11 +261,11 @@ SocDev.6.d:0 "Classrooms lie empty, books sit abandoned on desks, and most peopl
 SocDev.6.a:0 "Work is more important than Learning"
 
 SocDev.7.t:0 "Economic Health Improves"
-SocDev.7.d:0 "PLACEHOLDER"
+SocDev.7.d:0 "Thanks to our current economic policies we have seen an improvement in our national GDP. Because of this the current health and stability of our economy has greatly improved."
 SocDev.7.a:0 "The better the market, the freer the people!"
 
 SocDev.8.t:0 "Economic Health Worsens"
-SocDev.8.d:0 "PLACEHOLDER"
+SocDev.8.d:0 "Due to abandoned economic policies or just poor decisions the current health of our economy has unfortunately gotten worse."
 SocDev.8.a:0 "Guess money ain't worth as much anymore."
 
 SocDev.9.t:0 "Westernization Increases"
@@ -273,7 +273,7 @@ SocDev.9.d:0 "The nation has progressed further on the path to modern, western c
 SocDev.9.a:0 "Civilization, Ho!"
 
 SocDev.10.t:0 "A More Modern Military"
-SocDev.10.d:0 ""
+SocDev.10.d:0 "Thanks to our military exercises we now have a better military."
 SocDev.10.a:0 "\"Sir, yes Sir!\""
 
 ##########################
