--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -315,6 +315,8 @@
  support_equipment_desc:0 "Radios, Jeeps, Pontoons & other equipment used to support troops."
  support_equipment_1:0 "Support Equipment"
  support_equipment_1_desc:0 "Radios, Jeeps, Pontoons & other equipment used to support troops."
+ motorized_equipmen:0 "Motorized"
+ motorized_equipment_desc:0 ""
  motorized_equipment_1:0 "Motorised Equipment"
  motorized_equipment_1_desc:0 ""
  mechanized_equipment_1:0 "Mechanised Equipment I"
