--- a/localisation/english/PB_Operatives_l_english.yml
+++ b/localisation/english/PB_Operatives_l_english.yml
@@ -1,3 +1,3 @@
 ﻿l_english:
 operative_razormaiden:0 "Razormaiden Operative"
-  
+operative_razormaiden_desc:0 "This female operative has undergone special surgery to either replace or enchance her physical flesh, turning her into a razormaiden." 
