--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -241,7 +241,7 @@
  VICTORY_POINTS_11293:0 "Dublin"
  VICTORY_POINTS_7394:0 "Cork"
  VICTORY_POINTS_6380:0 "Moscow"
- VICTORY_POINTS_525:0 "Kyiv"
+ VICTORY_POINTS_525:0 "Kiev"
  VICTORY_POINTS_3529:0 "Tsaritsyn"
  VICTORY_POINTS_3151:0 "St. Petersburg"
  VICTORY_POINTS_6474:0 "Yuzivka"
