Some more stuff

--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -312,3 +312,6 @@
  artillery6:0 "Proximity Fuze"
  artillery6_desc:0 "The Proximity Fuze is a fuze that detonates an explosive devices automatically when the distance to the target becomes smaller then a predetermined value. It works for all kind of artillery or anti air shells and can be made used with rockets. Recent observations have shown that the lethality with this fuze increase by 5 to 10 times compared to the common contact fuze."
 
+ motorized_equipment:0 "Motorised Equipment"
+ mechanized_equipment:0 "Mechanised Equipment"
+ cat_mechanized_equipment_research:0 "Mechanization Research Speed"
