--- a/localisation/english/PB_Traits_l_english.yml
+++ b/localisation/english/PB_Traits_l_english.yml
@@ -8,6 +8,8 @@
 
   PB_Pers_Diligent:0 "Diligent"
 
+  PB_Radical_Opportunist:0 "Radical Opportunist"
+
   PB_Political_Architect:0 "Political Architect"
 
   PB_Futurist:0 "Futurist"
@@ -15,6 +17,9 @@
   PB_The_Diplomatic_King:0 "The Diplomatic King"
 
   PB_Little_Bolivar:0 "Little Bolívar"
+
+  germ_theorist:0 "Germ Theorist" 
+  bio_weapons_research:0 "Bio Weapons Research Speed" 
 
   augmented:0 "Augmented"
   augmented_desc:0 "This general has been biomechanically enhanced, either as a medical necessity or to improve combat performance. While this improves aspects of physical and mental performance, human augmentation is not an exact science and users require regular genetic therapy to prevent Acute Bodily Rejection Syndrome and septic illness."
