--- a/localisation/english/PB_France_l_english.yml
+++ b/localisation/english/PB_France_l_english.yml
@@ -364,7 +364,7 @@
   French.29.b:0 "Holland is of no concern to us."
   French.29.c:0 "The concert of Europe shall not be interrupted!"
 
-  French.30.t:0 "A Compromise at Wallonia"
+  French.30.t:0 "A Compromise at Dietsland"
   French.30.d:0 "A team of German diplomats has invited our ambassador to Germany and his team to the recently annexed  city of Liège, where they hope to make a compromise with us and avoid war between our two nations.  Already, the commotion and shouting in the room would seemingly be a bad omen, but not all hope may be lost yet.\n\nOne German diplomat in particular has proposed a rather tantalizing offer.  In exchange for abandoning their claims on the rest of Dietland, France shall be granted the region of Flanders,  completing the annexation of all former Belgian lands into the French nation.  Of course, the Dutch have absolutely no say in the matter, and their diplomats are not present at the conference."
   French.30.a:0 "Acceptable terms."
   French.30.b:0 "We will have all our claims!"
