--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -420,9 +420,9 @@ jet_strat_bomber_equipment_1:0 "Intra-Sonic Strategic Bomber"
 
 CAS_equipment:0 "TVAC"
 CAS_equipment_2:0 "TVAC I"
-CAS_equipment_2_desc:0 ""
+CAS_equipment_2_desc:0 "Through the use of the Teleforce Engine, military engineers have been able to turn plane designs on their head with the \"Discus\" design, named that way due to their resemblance with a discus one would throw. The \"discus\" design allows for greater speeds and agility than previous designs."
 CAS_equipment_3:0 "TVAC II"
-CAS_equipment_3_desc:0 ""
+CAS_equipment_3_desc:0 "-"
 
 fighter_equipment:0 "Fighter"
 fighter_equipment_2:0 "SSC I"
