Opening event audio tooltp

--- a/localisation/english/PB_Opener_l_english.yml
+++ b/localisation/english/PB_Opener_l_english.yml
@@ -4,4 +4,5 @@
   Opener.1.d:0 "Due to the super event audio cues containing some potentially copyrighted music, you can disable the super event audio now if you do not wish to hear it. Once disabled, super event visuals will appear without the associated audio cues."
   Opener.1.a:0 "Yes, I do want to disable the audio"
   Opener.1.b:0 "No, I do not want to disable audio"
-  PB_Opener_MP_Advisory:0 "§YPlease note that in multiplayer, if you wish to disable super event audio,§! §Ronly one person§! §Yneeds to select the option to do so. Multiple people selecting this option may result in bugs.§!"
+  PB_Opener_MP_Advisory:0 "§YPlease note that in multiplayer, if you wish to disable super event audio,§! §Ronly one person§! §Yneeds to select the option to do so. Multiple people selecting this option may result in bugs.§!\n\n"
+  PB_Music_Volume_Is_Tied_To_Super_Event_Audio:0 "§YSuper event audio is tied to music volume so if your music volume is set to zero then you will not hear any super event audio.§!"
