tech loc and some fixed portraits, that's all

--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -276,6 +276,7 @@
  air_teleforce_engine_desc:0 "Utilizing the Teleforce principle popularized by Tesla, the Teleforce engine abuses the electrostatic motion to propel items larger than pellets. Through this motion, an engine can be made that allows planes to fly and conquer the sky without the need for diesel." 
  jet_engines:0 "Intra-Sonic Uranium Engine"
  air_rotary_engine:0 "Rotary Blade Engine"
+ air_rotary_engine_desc:0 "Based on the early works of Dutch inventor Albert Gillis von Baumhauer and like-minded men of genius, the rotary blade engine allows us to field a new type of aircraft, more capable of dangerous manuevers and transportation than any previous design."
  jet_engines_desc:0 "Developed using cutting age science, Uranium Tele-Atomic Engines combine the kinetic thrust of a teleforce engine with the versatility of atomic power. With testing showing acceptable rates of cancer development in aeronauts, Tele-Atomic Engines will give a clear edge in aerial combat, while the warmth of nuclear power deters high altitude hypothermia"
 
  automatrons_folder:0 "Automatrons"
