--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -446,13 +446,19 @@ scout_plane_equipment_1:0 "Scout Drone I"
 scout_plane_equipment_2:0 "Scout Drone II"
 
 transport_chopper_equipment:0 "Transport Buzzard"
+transport_chopper_equipment_desc:0 "A somewhat primitive design, the Great War Buzzard, named after the comparison of its sound to that of a colony of bees, was utilized in specific parts of the European theater during the 1910s. Seeing service in Iberia and Italy, the Buzzard was useful for supplying troops across the sea."
 transport_chopper_equipment_1:0 "Great War Buzzard"
 transport_chopper_equipment_2:0 "Buzzard II"
+transport_chopper_equipment_2_desc:0 "Improving upon the Great War design, the Buzzard Mrk II. is an improvement in its abilities to supply and transport troops across small distances. More nimble and swifter than its Great War grandpa, the Mrk II. seems perfect for any coming conflict."
 transport_chopper_equipment_3:0 "Buzzard III"
+transport_chopper_equipment_3_desc:0 "Being an immense step forward from the Mrk II., the Buzzard III utilizes two systems of rotary blade engines, creating a relatively fast and agile alternative to previous generations of transport aircraft. This \"Hooper\", as it has been called by soldiers, is the right tool for the job."
 attack_chopper_equipment:0 "Attack Buzzard"
 attack_chopper_equipment_1:0 "Airwulf I"
+attack_chopper_equipment_1_desc:0 "The Airwulf is a concept that has been dreamed of since the 1920s, when the military tried to further militarize the transportation technology it had acquired during the Great War. However, until very recently, issues of weight and speed slowed down the possibilities. The Airwulf I is thus a triumph over these problems, producing a cheap alternative alternative to CAS."
 attack_chopper_equipment_2:0 "Airwulf II"
+attack_chopper_equipment_2_desc:0 "As we continue to further our understanding of the laws of physics, our progress on the Airwulf improves. Airwulf II improves on the failings of the first Airwulf system in immense ways, producing an attack buzzard capable of flying further distances and isolating pockets more efficiently." 
 attack_chopper_equipment_3:0 "Airwulf III"
+attack_chopper_equipment_3_desc:0 "A marvel on the battlefield and a dreadful sound to hear for the enemy, the Airwulf III is the one of the fastest buzzards created by humanity. A strikingly good alternative to CAS due to its low costs, the Airwulf III proves to be the future of warfare."
 attack_chopper:0 "Attack Buzzard"
 attack_chopper_desc:0 ""
 transport_chopper:0 "Transport Buzzard"
