Mech Blueprint+modules

--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -201,7 +201,23 @@
  gw_automat_2_desc:0 "The Mark II of the Light Duopod is furthering the design philosophy of the very first Duopod. Turning the flaws of the first Automats on their head, the Mark II further stabilizes the wonky \"legs\" of the machine, allowing for greater speeds and breakthrough. While the light armor gets a slight improvement over the old Duopod design, the Mark II still sports a slender and light armor design, allowing it to be produced even cheaper than the old Duopods."
  gw_automat_3:0 "Light Duopod III"
  gw_automat_3_desc:0 "The third variant of the Light Duopod exemplifies the perfecting of a craft. Mark III improves upon the characteristics of the old Duopods immensely, using more standardized parts that keep production costs low and the machine reliable. The perfecting of the Duopod's two legged transportation allows this version to reach speeds of 11/km per hour, turning it into a speed devil unmatched to most on the battlefield."
-
+ gw_automat_chassis_0:0 "Great War Automat"
+ gw_automat_chassis_1:0 "Light Duopod I"
+ gw_automat_chassis_2:0 "Light Duopod II"
+ gw_automat_chassis_3:0 "Light Duopod III"
+ tank_designer_gw_automat_chassis:0 "Light Duopod"
+ gw_automat_equipment_0:0 "Great War Automat"
+ tank_armour_heavy:0 "Armour Heavy"
+ tank_armour_medium:0 "Armour Medium"
+ tank_armour_light:0 "Armour Light"
+ tank_cannon_artillery:0 "Artillery Cannon"
+ tank_cannon_heavy:0 "Heavy Cannon"
+ tank_cannon_light:0 "Light Cannon"
+ tank_cannon_medium:0 "Medium Cannon"
+ tank_cannon_micro_atomic:0 "Micro-Atomic Cannon"
+ tank_cannon_teleforce:0 "Teleforce Cannon"
+ tank_atomic_engine:0 "Atomic Engine"
+ tank_teleforce_engine:0 "Teleforce Engine"
  tripod_automat_0:0 "Tripod I"
  tripod_automat_0_desc:0 "The Tripod is an unusual weapon, created out of a compromise of the old Great War automats: the issues of stabilization, light armor and fuel usage forced designers into either two camps of either Duopods or Quadropods. The Tripod breaks this trend as a jack-of-all-trades: more stable than the duopods and faster than the quadropod. However, as a compromise, the Tripod doesn't exhibit the heavy armor or firepower of the Quadropod, nor does it have the speed or low production cost of the Duopod."
  tripod_automat_1:0 "Tripod II"
