--- a/localisation/english/PB_Parties_l_english.yml
+++ b/localisation/english/PB_Parties_l_english.yml
@@ -159,8 +159,8 @@
   ENG_an_party_long:0 "Radical Faction of the Conservative Party"
   ENG_rc_party:0 "NPP"
   ENG_rc_party_long:0 "National People's Party"
-  ENG_ds_party:0 "NRF"
-  ENG_ds_party_long:0 "National Reorganization Front"
+  ENG_ds_party:0 "-"
+  ENG_ds_party_long:0 "-"
   ENG_ni_party:0 "BIL"
   ENG_ni_party_long:0 "British Imperial League"
 
