--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -272,8 +272,10 @@
  CAS2:0 "TVAC I"
  CAS3:0 "TVAC II"
 
- air_teleforce_engine:0 "Teleforce Engine"
+ air_teleforce_engine:0 "Lightweight Teleforce Engine"
  air_teleforce_engine_desc:0 "Utilizing the Teleforce principle popularized by Tesla, the Teleforce engine abuses the electrostatic motion to propel items larger than pellets. Through this motion, an engine can be made that allows planes to fly and conquer the sky without the need for diesel." 
+ air_teleforce_engine2:0 "Heavyweight Teleforce Engine"
+ air_teleforce_engine2_desc:0 "Utilizing the Teleforce principle popularized by Tesla, the Teleforce engine abuses the electrostatic motion to propel items larger than pellets. Through this motion, an engine can be made that allows planes to fly and conquer the sky without the need for diesel." 
  jet_engines:0 "Intra-Sonic Uranium Engine"
  air_rotary_engine:0 "Rotary Blade Engine"
  air_rotary_engine_desc:0 "Based on the early works of Dutch inventor Albert Gillis von Baumhauer and like-minded men of genius, the rotary blade engine allows us to field a new type of aircraft, more capable of dangerous manuevers and transportation than any previous design."
