--- a/localisation/english/frontend_l_english.yml
+++ b/localisation/english/frontend_l_english.yml
@@ -208,3 +208,4 @@
  CHAT_ERROR_CHAT_TIMEOUT_MESSAGE_SINGULAR:0 "You have been posting too frequently. Please wait for §Y1§! second before posting again."
  CHAT_ERROR_CHAT_TIMEOUT_MESSAGE_PLURAL:0 "You have been posting too frequently. Please wait for $TIME|Y$ seconds before posting again."
  POLL:0 "Next Pax Patch/Update Poll - Community Input"
+ DISCORD:0 "Pax Britannica Discord"
