--- a/localisation/english/PB_equipment_l_english.yml
+++ b/localisation/english/PB_equipment_l_english.yml
@@ -206,6 +206,8 @@
  gw_automat_chassis_2:0 "Light Duopod II"
  gw_automat_chassis_3:0 "Light Duopod III"
  tank_designer_gw_automat_chassis:0 "Light Duopod"
+ tank_designer_tripod_automat_chassis:0 "Tripod"
+ tank_designer_quadropod_automat_chassis:0 "Quadropod"
  gw_automat_equipment_0:0 "Great War Automat"
  tank_armour_heavy:0 "Armour Heavy"
  tank_armour_medium:0 "Armour Medium"
